# esp-wamr-component

./: .gitmodules  CMakeLists.txt  Kconfig  README.md
.github/workflows/: pre_commit_check.yml  run_idf_tests.yml  run_tests.yml
dockerfile/: Dockerfile
dockerfile-from-tools/: Dockerfile
include/: esp_wamr.h
src/: CMakeLists.txt  pytest_hello_world.py
src/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  test.wasm
